--- a/_CaltexGoPH/test-output/old/Suite/methods-alphabetical.html
+++ b/_CaltexGoPH/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e3c998">  <td>22/11/02 14:36:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_SignIn.Prereq_clickAllow(java.util.HashMap)[pri:0, instance:tests.OnBoarding_SignIn@1563da5]">Prereq_clickAllow</td> 
-  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>22/11/02 14:37:10</td>   <td>10959</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_SignIn.TS1_MobileNumber(java.util.HashMap)[pri:0, instance:tests.OnBoarding_SignIn@1563da5]">TS1_MobileNumber</td> 
-  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>22/11/02 14:37:46</td>   <td>46705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_SignIn.TS2_EmailAddress(java.util.HashMap)[pri:0, instance:tests.OnBoarding_SignIn@1563da5]">TS2_EmailAddress</td> 
-  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="a5fe93">  <td>22/11/02 14:36:31</td>   <td>-28155</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest(java.lang.String)[pri:0, instance:tests.OnBoarding_SignIn@1563da5]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
-<tr bgcolor="a5fe93">  <td>22/11/02 14:38:42</td>   <td>102827</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:tests.OnBoarding_SignIn@1563da5]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@84739718</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>22/11/03 20:24:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_LandingPage.ChangeLanguage_VerifyPageTranslation_BahasaMelayu(java.util.HashMap)[pri:4, instance:tests.OnBoarding_LandingPage@30a3107a]">ChangeLanguage_VerifyPageTranslation_BahasaMelayu</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>22/11/03 20:25:39</td>   <td>66136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_LandingPage.ChangeLanguage_VerifyPageTranslation_English(java.util.HashMap)[pri:6, instance:tests.OnBoarding_LandingPage@30a3107a]">ChangeLanguage_VerifyPageTranslation_English</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>22/11/03 20:26:47</td>   <td>134619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_LandingPage.ChangeLanguage_VerifyPageTranslation_Thai(java.util.HashMap)[pri:8, instance:tests.OnBoarding_LandingPage@30a3107a]">ChangeLanguage_VerifyPageTranslation_Thai</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>22/11/03 20:22:59</td>   <td>-93200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_LandingPage.ChangeLanguage_VerifySupportedLanguagesPerCountry_Australia(java.util.HashMap)[pri:2, instance:tests.OnBoarding_LandingPage@30a3107a]">ChangeLanguage_VerifySupportedLanguagesPerCountry_Australia</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>22/11/03 20:23:44</td>   <td>-48230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_LandingPage.ChangeLanguage_VerifySupportedLanguagesPerCountry_Malaysia(java.util.HashMap)[pri:3, instance:tests.OnBoarding_LandingPage@30a3107a]">ChangeLanguage_VerifySupportedLanguagesPerCountry_Malaysia</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>22/11/03 20:24:53</td>   <td>20645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_LandingPage.ChangeLanguage_VerifySupportedLanguagesPerCountry_Philippines(java.util.HashMap)[pri:5, instance:tests.OnBoarding_LandingPage@30a3107a]">ChangeLanguage_VerifySupportedLanguagesPerCountry_Philippines</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>22/11/03 20:25:59</td>   <td>87041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_LandingPage.ChangeLanguage_VerifySupportedLanguagesPerCountry_Thailand(java.util.HashMap)[pri:7, instance:tests.OnBoarding_LandingPage@30a3107a]">ChangeLanguage_VerifySupportedLanguagesPerCountry_Thailand</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>22/11/03 20:22:22</td>   <td>-130756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OnBoarding_LandingPage.CountrySelector_VerifyCountriesAvailable(java.util.HashMap)[pri:1, instance:tests.OnBoarding_LandingPage@30a3107a]">CountrySelector_VerifyCountriesAvailable</td> 
+  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="a5fe93">  <td>22/11/03 20:21:28</td>   <td>-184467</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeTest(java.lang.String)[pri:0, instance:tests.OnBoarding_LandingPage@30a3107a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="a5fe93">  <td>22/11/03 20:27:28</td>   <td>175695</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:tests.OnBoarding_LandingPage@30a3107a]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
 </table>
