--- a/_CaltexGoPH/test-output/old/Suite/classes.html
+++ b/_CaltexGoPH/test-output/old/Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.OnBoarding_SignIn</td>
+<td>tests.ProfileManagement_MyAccount</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -15,11 +15,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TS1_MobileNumber</td>
+<td>EditProfile_EditUsingValidFirstNameAndLastName</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TS2_EmailAddress</td>
+<td>Prereq1_SignIn</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>EditProfile_EditUsingInvalidFirstNameAndLastName</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>EditProfile_VerifyPopUpModal_BirthdayAndMobileNumber</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
